--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
             <artifactId>vertx-hazelcast</artifactId>
             <version>4.5.7</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-web</artifactId>
+            <version>4.5.7</version>
+        </dependency>
     </dependencies>
 
 </project>
